--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       content="reactjs, react, porfolio-app, three-js, modern-ui/ux, js, javascript, html, css, tailwindcss"
     />
     <!-- Author -->
-    <meta name="author" content="Sanidhya Kr. Verma" />
-    <link rel="author" href="https://github.com/sanidhyy" />
+    <meta name="author" content="Tharun Kumar R G" />
+    <link rel="author" href="https://github.com/tharunkumarsurya" />
 
     <!-- Icon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" sizes="any" />
@@ -38,7 +38,7 @@
     <meta name="color-scheme" content="dark" />
 
     <!-- Title -->
-    <title>Shubham | Portfolio</title>
+    <title>Tharun | Portfolio</title>
   </head>
   <body>
     <noscript></noscript>
